🐞 fix(bug visibility): fix bug visibility
fix bug that hide footer when in reactive and mobile display. Replace all visibility proprierty with a normal display: block/none

--- a/css/style.css
+++ b/css/style.css
@@ -206,19 +206,19 @@ main .reproduction::before {
   width: 100%;
   height: 100%;
   background-color: black;
-  visibility: hidden;
+  display:none;
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
 }
 
 main .reproduction::before {
-  visibility: visible;
+  display:block;
   opacity: 0.7;
 }
 
 
 main .article-img:hover::before {
-  visibility: visible;
+  display:block;
   opacity: 0.7;
 }
 
